--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
