--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "HOST=192.168.72.254 PORT=3000 react-scripts start"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
